v3/crates/engine/tests/snapshots/execution__common__ir_execute__commands__functions_admin.snap
---
source: crates/engine/tests/common.rs
expression: ir
---
V1(
    QueryRequestV1 {
        queries: {
            Alias(
                Identifier(
                    "getLatestActorId",
                ),
            ): Command(
                CommandSelection {
                    target: CommandTarget {
                        subgraph: SubgraphName(
                            "default",
                        ),
                        command_name: CommandName(
                            Identifier(
                                "get_latest_actor_id",
                            ),
                        ),
                        arguments: {},
                    },
                    selection: Some(
                        {},
                    ),
                },
            ),
            Alias(
                Identifier(
                    "getLatestActorName",
                ),
            ): Command(
                CommandSelection {
                    target: CommandTarget {
                        subgraph: SubgraphName(
                            "default",
                        ),
                        command_name: CommandName(
                            Identifier(
                                "get_latest_actor_name",
                            ),
                        ),
                        arguments: {},
                    },
                    selection: Some(
                        {},
                    ),
                },
            ),
            Alias(
                Identifier(
                    "getActorById",
                ),
            ): Command(
                CommandSelection {
                    target: CommandTarget {
                        subgraph: SubgraphName(
                            "default",
                        ),
                        command_name: CommandName(
                            Identifier(
                                "get_actor_by_id",
                            ),
                        ),
                        arguments: {
                            ArgumentName(
                                Identifier(
                                    "actor_id",
                                ),
                            ): Literal(
                                Number(1),
                            ),
                        },
                    },
                    selection: Some(
                        {
                            Alias(
                                Identifier(
                                    "movie_id",
                                ),
                            ): Field(
                                ObjectFieldSelection {
                                    target: ObjectFieldTarget {
                                        field_name: FieldName(
                                            Identifier(
                                                "movie_id",
                                            ),
                                        ),
                                        arguments: {},
                                    },
                                    selection: None,
                                },
                            ),
                            Alias(
                                Identifier(
                                    "name",
                                ),
                            ): Field(
                                ObjectFieldSelection {
                                    target: ObjectFieldTarget {
                                        field_name: FieldName(
                                            Identifier(
                                                "name",
                                            ),
                                        ),
                                        arguments: {},
                                    },
                                    selection: None,
                                },
                            ),
                        },
                    ),
                },
            ),
        },
    },
)
