v3/crates/engine/tests/snapshots/execution__common__ir_execute__commands__object_type_input_arguments_admin.snap
---
source: crates/engine/tests/common.rs
expression: ir
---
V1(
    QueryRequestV1 {
        queries: {
            Alias(
                Identifier(
                    "getActorsByName",
                ),
            ): Command(
                CommandSelection {
                    target: CommandTarget {
                        subgraph: SubgraphName(
                            "default",
                        ),
                        command_name: CommandName(
                            Identifier(
                                "get_actors_by_name",
                            ),
                        ),
                        arguments: {
                            ArgumentName(
                                Identifier(
                                    "name_filter",
                                ),
                            ): Literal(
                                Object {
                                    "first_name": String("Kate"),
                                    "surname": Null,
                                },
                            ),
                        },
                    },
                    selection: Some(
                        {
                            Alias(
                                Identifier(
                                    "movie_id",
                                ),
                            ): Field(
                                ObjectFieldSelection {
                                    target: ObjectFieldTarget {
                                        field_name: FieldName(
                                            Identifier(
                                                "movie_id",
                                            ),
                                        ),
                                        arguments: {},
                                    },
                                    selection: None,
                                },
                            ),
                            Alias(
                                Identifier(
                                    "name",
                                ),
                            ): Field(
                                ObjectFieldSelection {
                                    target: ObjectFieldTarget {
                                        field_name: FieldName(
                                            Identifier(
                                                "name",
                                            ),
                                        ),
                                        arguments: {},
                                    },
                                    selection: None,
                                },
                            ),
                        },
                    ),
                },
            ),
        },
    },
)
